# cinna-core

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  custom_tools_example.py  deployment.md  development.md  docker-compose.override.yml  docker-compose.yml  task.txt
backend/app/env-templates/python-env-advanced/: .env.template  Dockerfile  docker-compose.template.yml  pyproject.toml
backend/app/env-templates/python-env-advanced/.claude/commands/: workflowkit.clarify.md  workflowkit.constitution.md  workflowkit.implement.md  workflowkit.plan.md  workflowkit.specify.md  workflowkit.techify.md
backend/app/env-templates/python-env-advanced/.workflowkit/memory/: constitution.md
backend/app/env-templates/python-env-advanced/.workflowkit/templates/: spec-template.md  tech-template.md
backend/app/env-templates/python-env-advanced/app/: BUILDING_AGENT_EXAMPLE.md  main.py
backend/app/env-templates/python-env-advanced/app/core/: main.py
backend/app/env-templates/python-env-advanced/app/core/server/: active_session_manager.py  agent_env_service.py  models.py  prompt_generator.py  routes.py  sdk_manager.py  sdk_utils.py
backend/app/env-templates/python-env-advanced/app/core/server/adapters/: __init__.py  base.py  claude_code.py  google_adk.py
backend/app/env-templates/python-env-advanced/app/core/server/adapters/google_adk_wr_prompts/: general_system_prompt.md
backend/app/env-templates/python-env-advanced/app/docs/: ENTRYPOINT_PROMPT.md  WORKFLOW_PROMPT.md
backend/app/env-templates/python-env-advanced/app/server/: models.py  routes.py  sdk_manager.py
(+985 files in other folders)
