[project]
name = "agent-environment"
version = "1.0.0"
description = "Agent Environment Runtime"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
